--- a/contact_us.html
+++ b/contact_us.html
@@ -1,1 +1,97 @@
-contact_us
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    function showThankYouMessage(event) {
+      event.preventDefault(); // Prevent form submission
+      alert("We got your message. Thank you for contacting us!");
+      // Clear the form fields
+      document.getElementById("name").value = "";
+      document.getElementById("email").value = "";
+      document.getElementById("message").value = "";
+    }
+  </script>
+</head>
+<body class="bg-gray-50">
+  <div class="container mx-auto py-8">
+    <!-- Top Section with 3 Containers -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
+      <!-- Location Container -->
+      <div class="bg-gray-100 p-4 rounded-xl shadow-md text-center">
+        <h2 class="text-xl font-bold mb-2">Location</h2>
+        <p>123 Main Street, Cityville</p>
+      </div>
+
+      <!-- Contact Number Container -->
+      <div class="bg-gray-100 p-4 rounded-xl shadow-md text-center">
+        <h2 class="text-xl font-bold mb-2">Contact Number</h2>
+        <p>+1 234 567 890</p>
+      </div>
+
+      <!-- Email Container -->
+      <div class="bg-gray-100 p-4 rounded-xl shadow-md text-center">
+        <h2 class="text-xl font-bold mb-2">Email</h2>
+        <p>info@carservice.com</p>
+      </div>
+    </div>
+
+    <!-- Inquiry Form -->
+    <div class="bg-white p-6 rounded-xl shadow-md">
+      <h2 class="text-2xl font-bold mb-4">Inquiry Form</h2>
+      <form onsubmit="showThankYouMessage(event)" class="space-y-4">
+        <!-- Name Field -->
+        <div>
+          <label for="name" class="block text-sm font-medium mb-1">Enter Your Name:</label>
+          <input 
+            type="text" 
+            id="name" 
+            name="name" 
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none" 
+            required>
+        </div>
+
+        <!-- Email Field -->
+        <div>
+          <label for="email" class="block text-sm font-medium mb-1">Enter Your Email:</label>
+          <input 
+            type="email" 
+            id="email" 
+            name="email" 
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none" 
+            required>
+        </div>
+
+        <!-- Message Field -->
+        <div>
+          <label for="message" class="block text-sm font-medium mb-1">Message:</label>
+          <textarea 
+            id="message" 
+            name="message" 
+            rows="4" 
+            class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:ring-2 focus:ring-blue-500 focus:outline-none" 
+            required></textarea>
+        </div>
+
+        <!-- Buttons -->
+        <div class="flex space-x-4">
+          <button 
+            type="submit" 
+            class="bg-blue-500 text-white px-6 py-2 rounded-lg hover:bg-blue-600 focus:ring-2 focus:ring-blue-500">
+            Submit
+          </button>
+          <button 
+            type="reset" 
+            class="bg-gray-500 text-white px-6 py-2 rounded-lg hover:bg-gray-600 focus:ring-2 focus:ring-gray-500">
+            Clear
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</body>
+</html>
+
