--- a/index.html
+++ b/index.html
@@ -1,1 +1,149 @@
-<h1> yeee hawwww!!!</h1>>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Car-ing Homepage</title>
+    <!-- added bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="indexStyles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <!-- logo-->
+      <div class="log">
+        <img src="img/logo.png" alt="Car Logo" class="logo" />
+      </div>
+      <!-- navigation -->
+      <nav class="navigation">
+        <a href="index.html">Home</a>
+        <a href="Services.html">Our Services</a>
+        <a href="aboutUs.html">About Us</a>
+        <a href="contact_us.html">Contact Us</a>
+      </nav>
+    </header>
+
+    <section class="whyChoose">
+      <div class="texts">
+        <h2>Welcome to Car-ing!</h2>
+        <p>
+          Your trusted partner for reliable, efficient, and affordable car
+          servicing!
+        </p>
+        <p>Why choose us?</p>
+        <ul>
+          <li>✅ Experienced Professionals</li>
+          <li>✅ Comprehensive Services</li>
+          <li>✅ Customer Satisfaction</li>
+          <li>✅ Affordable Pricing</li>
+        </ul>
+      </div>
+    </section>
+    <!-- pricing -->
+    <section class="pricing">
+      <h2>Pricing</h2>
+      <div class="pricingCards">
+        <div class="card">
+          <h2>Basic</h2>
+          <p class="price">20€</p>
+          <p>Wash, Tire change.</p>
+          <button><b>Book</b></button>
+        </div>
+        <div class="card">
+          <h2>Regular</h2>
+          <p class="price">50€</p>
+          <p>
+            Wash, Tire change, Shine. <br />
+            Engine Maintenance
+          </p>
+          <button><b>Book</b></button>
+        </div>
+        <div class="card">
+          <h2>High End</h2>
+          <p class="price">150€</p>
+          <p>
+            Free Wash, Touch up, Full Cleaning, <br />
+            Engine Maintenance
+          </p>
+          <button><b>Book</b></button>
+        </div>
+      </div>
+    </section>
+    <!-- testimonials -->
+    <section class="testimonials">
+      <h2>What Our Customers Say</h2>
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="testimonial">
+              <p>
+                "I've dealt with Care-ing for years now, and wouldn't change to
+                anyone else."
+              </p>
+              <img src="img/elon.jpeg" alt="" class="reviewer" />
+              <h4>- Elon Musk</h4>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="testimonial">
+              <p>"Care-ing is the best."</p>
+              <img src="img/onizuka.jpeg" alt="" class="reviewer" />
+              <h4>- Onizuka</h4>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="testimonial">
+              <p>
+                "Great knowledge and really good mechanics, my car now runs like
+                an arrow."
+              </p>
+              <img src="img/artemis.jpg" alt="" class="reviewer" />
+              <h4>- Artemis</h4>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleFade"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleFade"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer-content">
+        <h2>Car-ing</h2>
+        <p>
+          Established in 2020, we offer a wide range of services and repairs at
+          a reasonable price. From all maintenance to repairs, at Car-ing, your
+          car is in safe hands.
+        </p>
+      </div>
+    </footer>
+
+    <!-- added bootstrap javascript -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
