Added Header and Background Styling to all pages

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <link rel="stylesheet" href="indexStyles.css" />
     <link rel="stylesheet" href="style.css">
+    
 </head>
-<body>
-<header>
+<body >
+
+    <header class="header aboutusheader" >
+        <!-- logo-->
+        <div class="log">
+          <img src="img/logo.png" alt="Car Logo" class="logo" />
+        </div>
+        <!-- navigation -->
+        <nav class="navigation">
+          <a href="index.html">Home</a>
+          <a href="Services.html">Our Services</a>
+          <a href="aboutUs.html">About Us</a>
+          <a href="contact_us.html">Contact Us</a>
+        </nav>
+      </header>
+
+<header class="header">
     <h1>About us</h1>
     <p>Your Trusted Car Service Partner</p>
 </header>
