--- a/contact_us.html
+++ b/contact_us.html
@@ -15,8 +15,24 @@
       document.getElementById("message").value = "";
     }
   </script>
+  <link rel="stylesheet" href="indexStyles.css" />
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-50" style="background-color: #586a8e;">
+
+  <header class="header">
+    <!-- logo-->
+    <div class="log">
+      <img src="img/logo.png" alt="Car Logo" class="logo" />
+    </div>
+    <!-- navigation -->
+    <nav class="navigation">
+      <a href="index.html">Home</a>
+      <a href="Services.html">Our Services</a>
+      <a href="aboutUs.html">About Us</a>
+      <a href="contact_us.html">Contact Us</a>
+    </nav>
+  </header>
+
   <div class="container mx-auto py-8">
     <!-- Top Section with 3 Containers -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-8">
