added all the code for services page, few spelling adjustments in all header in all files

--- a/Services.html
+++ b/Services.html
@@ -1,1 +1,72 @@
-<!--  -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Services - Car-ing</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Header -->
+    <header class="services-header">
+        <!-- logo-->
+        <div class="log">
+          <img src="img/logo.png" alt="Car Logo" class="logo" />
+        </div>
+        <!-- navigation -->
+        <nav class="navigation">
+          <a href="index.html">Home</a>
+          <a href="services.html">Our Services</a>
+          <a href="aboutUs.html">About Us</a>
+          <a href="contact_us.html">Contact Us</a>
+        </nav>
+    </header>
+    
+
+    <!-- Hero Section -->
+    <div class="hero">
+        <h1 id="herotext">Our Premium Car Services</h1>
+    </div>
+
+    <!-- Services Grid Container -->
+    <div class="services-conatiner">
+        <div class="card">
+            <img src="img/carwash.avif" alt="Car Wash">
+            <h5 class="card-title">Car Wash</h5>
+            <p class="card-text">Get a premium wash for your car with high-quality cleaning materials.</p>
+        </div>
+        <div class="card">
+            <img src="img/repair.avif" alt="Engine Repair">
+            <h5 class="card-title">Engine Repair</h5>
+            <p class="card-text">Expert engine diagnostics and repairs for smooth performance.</p>
+        </div>
+        <div class="card">
+            <img src="img/tyre.avif" alt="Tire Change">
+            <h5 class="card-title">Tire Change</h5>
+            <p class="card-text">Quick and reliable tire changes for all vehicle models.</p>
+        </div>
+    </div>
+    <!-- Services Grid Container END -->
+
+    
+
+    <!-- Call to Action -->
+    <div class="services-cta">
+        <h2>Need a Service?</h2>
+        <p>Book an appointment with us today!</p>
+        <a href="contact_us.html">Book Now</a>
+    </div>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer-content">
+          <h2>Car-ing</h2>
+          <p>
+            Established in 2020, we offer a wide range of services and repairs at
+            a reasonable price. From all maintenance to repairs, at Car-ing, your
+            car is in safe hands.
+          </p>
+        </div>
+    </footer>
+</body>
+</html>
