--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <!-- navigation -->
       <nav class="navigation">
         <a href="index.html">Home</a>
-        <a href="Services.html">Our Services</a>
+        <a href="services.html">Our Services</a>
         <a href="aboutUs.html">About Us</a>
         <a href="contact_us.html">Contact Us</a>
       </nav>
@@ -52,7 +52,7 @@
           <h2>Basic</h2>
           <p class="price">20€</p>
           <p>Wash, Tire change.</p>
-          <button><b>Book</b></button>
+          <a href="services.html"><button><b>Book</b></button></a>
         </div>
         <div class="card">
           <h2>Regular</h2>
@@ -61,7 +61,7 @@
             Wash, Tire change, Shine. <br />
             Engine Maintenance
           </p>
-          <button><b>Book</b></button>
+          <a href="services.html"><button><b>Book</b></button></a>
         </div>
         <div class="card">
           <h2>High End</h2>
@@ -70,7 +70,7 @@
             Free Wash, Touch up, Full Cleaning, <br />
             Engine Maintenance
           </p>
-          <button><b>Book</b></button>
+          <a href="services.html"><button><b>Book</b></button></a>
         </div>
       </div>
     </section>
