--- a/contact_us.html
+++ b/contact_us.html
@@ -27,7 +27,7 @@
     <!-- navigation -->
     <nav class="navigation">
       <a href="index.html">Home</a>
-      <a href="Services.html">Our Services</a>
+      <a href="services.html">Our Services</a>
       <a href="aboutUs.html">About Us</a>
       <a href="contact_us.html">Contact Us</a>
     </nav>
