--- a/contact_us.html
+++ b/contact_us.html
@@ -108,6 +108,18 @@
       </form>
     </div>
   </div>
+
+  <footer class="footer">
+    <div class="footer-content">
+      <h2>Car-ing</h2>
+      <p>
+        Established in 2020, we offer a wide range of services and repairs at
+        a reasonable price. From all maintenance to repairs, at Car-ing, your
+        car is in safe hands.
+      </p>
+    </div>
+  </footer>
+
 </body>
 </html>
 
