proper styling of header and footer across all pages

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,7 +9,7 @@
 </head>
 <body >
 
-    <header class="header aboutusheader" >
+    <header class="header" >
     <!-- logo-->
     <div class="log">
         <img src="img/logo.png" alt="Car Logo" class="logo" />
@@ -24,12 +24,12 @@
     </header>
 
     <div class="about-body">
-        <header class="header">
+        <header class="aboutusheader">
             <h1>About us</h1>
             <p>Your Trusted Car Service Partner</p>
         </header>
         <!--introduction section-->
-        <h2>Who we are</h2>
+        <h2 class="h2-1">Who we are</h2>
         <p>
             At car-ing, we are dedicated to providing top notch car maintanance and repair services to keep
             your vehicle in excellent condition.With years of exprience in the industry, we pride ourselves 
