--- a/services.html
+++ b/services.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Services - Car-ing</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="indexStyles.css" />
+
 </head>
-<body>
+<body class="services-body">
     <!-- Header -->
-    <header class="services-header">
+    <header class="header">
         <!-- logo-->
         <div class="log">
           <img src="img/logo.png" alt="Car Logo" class="logo" />
