--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
     <!-- pricing -->
     <section class="pricing">
-      <h2>Pricing</h2>
+      <h2 class="h2-pricing">Pricing</h2>
       <div class="pricingCards">
         <div class="card">
           <h2>Basic</h2>
