detail added to about us

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -49,9 +49,10 @@
         <!--Team member-->
         <h3> Team Members</h3>
         <p>
-            Abbie  - Lead Mechanic ,
-            Jacky  - Service Manager,
-            Mike   - Customer Suuport.
+            Sadia  - Lead Mechanic ,
+            Shuvo  - Service Manager,
+            Nikhil - Customer Suuport,
+            Rashmi - Customer Suuport.
         </p>
     </div>
 
