code owner names added on pages & Readme updated

--- a/contact_us.html
+++ b/contact_us.html
@@ -1,3 +1,6 @@
+<!-- Maha Marakkalage Rashmi - Contact_Us Page -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -123,3 +126,5 @@
 </body>
 </html>
 
+
+<!-- Maha Marakkalage Rashmi - Contact_Us Page -->
