--- a/services.html
+++ b/services.html
@@ -1,3 +1,6 @@
+<!-- Nikhil - Services Page -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,12 +11,15 @@
 
 </head>
 <body class="services-body">
+
     <!-- Header -->
     <header class="header">
+
         <!-- logo-->
         <div class="log">
           <img src="img/logo.png" alt="Car Logo" class="logo" />
         </div>
+
         <!-- navigation -->
         <nav class="navigation">
           <a href="index.html">Home</a>
@@ -21,6 +27,7 @@
           <a href="aboutUs.html">About Us</a>
           <a href="contact_us.html">Contact Us</a>
         </nav>
+
     </header>
     
 
@@ -29,23 +36,28 @@
         <h1 id="herotext">Our Premium Car Services</h1>
     </div>
 
-    <!-- Services Grid Container -->
+
+    <!-- Services Grid Container START -->
     <div class="services-conatiner">
+
         <div class="card">
             <img src="img/carwash.avif" alt="Car Wash">
             <h5 class="card-title">Car Wash</h5>
             <p class="card-text">Get a premium wash for your car with high-quality cleaning materials.</p>
         </div>
+
         <div class="card">
             <img src="img/repair.avif" alt="Engine Repair">
             <h5 class="card-title">Engine Repair</h5>
             <p class="card-text">Expert engine diagnostics and repairs for smooth performance.</p>
         </div>
+
         <div class="card">
             <img src="img/tyre.avif" alt="Tire Change">
             <h5 class="card-title">Tire Change</h5>
             <p class="card-text">Quick and reliable tire changes for all vehicle models.</p>
         </div>
+
     </div>
     <!-- Services Grid Container END -->
 
@@ -56,7 +68,9 @@
         <h2>Need a Service?</h2>
         <p>Book an appointment with us today!</p>
         <a href="contact_us.html">Book Now</a>
+        <!-- Later change this ^ link to the actual booking form -->
     </div>
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -71,3 +85,6 @@
     </footer>
 </body>
 </html>
+
+
+<!-- Nikhil - Services Page -->
